infrastructure/kubernetes/payment/0-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: payment-ns
  labels:
    name: payment-ns
