infrastructure/kubernetes/payment/4-ingclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: default-ingress-class
spec:
  controller: ingress-nginx
