infrastructure/kubernetes/payment/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  labels:
    app: payment
  namespace: payment-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      annotations:
        prometheus.io/port: "9000"
        prometheus.io/path: "/metrics"
        prometheus.io/scrape: "true"
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: mekniwassime/devops_project:payment-06d331c79f99bd5d168f7bc610a5b16c5ac4fa0f
      - name: sidecar
        image: mekniwassime/devops_project:sidecarproxy-f1ccd9bda3a30745731b40e454da3c60207c5413
