infrastructure/kubernetes/payment/2-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  payment-svc
spec:
  selector:
    app:  payment
  type:  ClusterIP
  ports:
  - name:  payment-svc-port
    port:  80
    targetPort:  8000
