infrastructure/kubernetes/payment/3-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: payment-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /payment
          backend:
            serviceName: payment-svc
            servicePort: payment-svc-port
