infrastructure/kubernetes/payment/4-network-pol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payment-net-pol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: payment
  policyTypes:
    - Ingress
  ingress:
    - from:
      ports:
        - protocol: TCP
          port: 3000
